code for Modal use

--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
