--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  background-color: transparent;
 }
